finishes draft of examples chapter

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -37,23 +37,6 @@
 	file = {SAGE PDF Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/B59LSPCT/Ball - 2019 - Conducting Online Surveys.pdf:application/pdf},
 }
 
-@article{deb_evolutionary_2014,
-	title = {An Evolutionary Many-Objective Optimization Algorithm Using Reference-Point-Based Nondominated Sorting Approach, Part I: Solving Problems With Box Constraints},
-	volume = {18},
-	issn = {1941-0026},
-	doi = {10.1109/TEVC.2013.2281535},
-	shorttitle = {An Evolutionary Many-Objective Optimization Algorithm Using Reference-Point-Based Nondominated Sorting Approach, Part I},
-	abstract = {Having developed multiobjective optimization algorithms using evolutionary optimization methods and demonstrated their niche on various practical problems involving mostly two and three objectives, there is now a growing need for developing evolutionary multiobjective optimization ({EMO}) algorithms for handling many-objective (having four or more objectives) optimization problems. In this paper, we recognize a few recent efforts and discuss a number of viable directions for developing a potential {EMO} algorithm for solving many-objective optimization problems. Thereafter, we suggest a reference-point-based many-objective evolutionary algorithm following {NSGA}-{II} framework (we call it {NSGA}-{III}) that emphasizes population members that are nondominated, yet close to a set of supplied reference points. The proposed {NSGA}-{III} is applied to a number of many-objective test problems with three to 15 objectives and compared with two versions of a recently suggested {EMO} algorithm ({MOEA}/D). While each of the two {MOEA}/D methods works well on different classes of problems, the proposed {NSGA}-{III} is found to produce satisfactory results on all problems considered in this paper. This paper presents results on unconstrained problems, and the sequel paper considers constrained and other specialties in handling many-objective optimization problems.},
-	pages = {577--601},
-	number = {4},
-	journaltitle = {{IEEE} Transactions on Evolutionary Computation},
-	author = {Deb, Kalyanmoy and Jain, Himanshu},
-	date = {2014-08},
-	note = {Conference Name: {IEEE} Transactions on Evolutionary Computation},
-	keywords = {Educational institutions, evolutionary computation, Evolutionary computation, large dimension, many-objective optimization, Many-objective optimization, Measurement, multi-criterion optimization, multicriterion optimization, non-dominated sorting, nondominated sorting, {NSGA}-{III}, Optimization, Sociology, Statistics, Vectors, Zirconium},
-	file = {IEEE Xplore Abstract Record:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4BB6YLGF/6600851.html:text/html;IEEE Xplore Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6UANYIS9/Deb and Jain - 2014 - An Evolutionary Many-Objective Optimization Algori.pdf:application/pdf},
-}
-
 @report{massetti_environmental_2017,
 	location = {Oak Ridge, {TN}},
 	title = {Environmental Quality and the U.S. Power Sector: Air Quality, Water Quality, Land Use and Environmental Justice},
@@ -7787,24 +7770,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/I3HZBTI7/Torralba-Díaz et al. - 2020 - Identification of the Efficiency Gap by Coupling a.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CELRP3XL/3920.html:text/html},
 }
 
-@article{deissenroth_assessing_2017,
-	title = {Assessing the Plurality of Actors and Policy Interactions: Agent-Based Modelling of Renewable Energy Market Integration},
-	volume = {2017},
-	issn = {1076-2787},
-	url = {https://www.hindawi.com/journals/complexity/2017/7494313/},
-	doi = {10.1155/2017/7494313},
-	shorttitle = {Assessing the Plurality of Actors and Policy Interactions},
-	abstract = {The ongoing deployment of renewable energy sources ({RES}) calls for an enhanced integration of {RES} into energy markets, accompanied by a new set of regulations. In Germany, for instance, the feed-in tariff legislation for renewables has been successively replaced by first optional and then obligatory marketing of {RES} on competitive wholesale markets. This paper introduces an agent-based model that allows studying the impact of changing energy policy instruments on the economic performance of {RES} operators and marketers. The model structure, its components, and linkages are presented in detail; an additional case study demonstrates the capability of our sociotechnical model. We find that changes in the political framework cannot be mapped directly to {RES} operators as behaviour of intermediary market actors has to be considered as well. Characteristics and strategies of intermediaries are thus an important factor for successful {RES} marketing and further deployment. It is shown that the model is able to assess the emergence and stability of market niches.},
-	pages = {e7494313},
-	journaltitle = {Complexity},
-	author = {Deissenroth, Marc and Klein, Martin and Nienhaus, Kristina and Reeg, Matthias},
-	urldate = {2022-07-31},
-	date = {2017-12-10},
-	langid = {english},
-	note = {Publisher: Hindawi},
-	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/VYAUYXKS/Deissenroth et al. - 2017 - Assessing the Plurality of Actors and Policy Inter.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CVUJG5TB/7494313.html:text/html},
-}
-
 @article{staffell_increasing_2018,
 	title = {The increasing impact of weather on electricity supply and demand},
 	volume = {145},
@@ -9242,7 +9207,7 @@ Publisher: Nature Publishing Group},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2XAG5UZN/Glismann - 2021 - Ancillary Services Acquisition Model Considering .pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5C2TT9KV/S030626192101045X.html:text/html},
 }
 
-@article{deissenroth_assessing_2017-1,
+@article{deissenroth_assessing_2017,
 	title = {Assessing the Plurality of Actors and Policy Interactions: Agent-Based Modelling of Renewable Energy Market Integration},
 	volume = {2017},
 	issn = {1076-2787},
@@ -9257,7 +9222,7 @@ Publisher: Nature Publishing Group},
 	date = {2017-12-10},
 	langid = {english},
 	note = {Publisher: Hindawi},
-	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/M7D7T7D4/Deissenroth et al. - 2017 - Assessing the Plurality of Actors and Policy Inter.pdf:application/pdf},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/M7D7T7D4/Deissenroth et al. - 2017 - Assessing the Plurality of Actors and Policy Inter.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CVUJG5TB/7494313.html:text/html},
 }
 
 @report{nalley_national_2019,
@@ -10902,7 +10867,7 @@ Publication Title: Social Trust and the Management of Risk},
 	file = {Blank et al. - 2021 - Generating Well-Spaced Points on a Unit Simplex fo.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/T6Z53GF4/Blank et al. - 2021 - Generating Well-Spaced Points on a Unit Simplex fo.pdf:application/pdf},
 }
 
-@article{deb_evolutionary_2014-1,
+@article{deb_evolutionary_2014,
 	title = {An Evolutionary Many-Objective Optimization Algorithm Using Reference-Point-Based Nondominated Sorting Approach, Part I: Solving Problems With Box Constraints},
 	volume = {18},
 	issn = {1941-0026},
@@ -20241,16 +20206,6 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PSWQ9YGJ/Leddy et al. - 2023 - Measuring and Valuing Resilience A Literature Review for the Power Sector.pdf:application/pdf},
 }
 
-@online{noauthor_technical_nodate,
-	title = {Technical Workshop on Fuel Cycle Simulation ({TWOFCS})},
-	url = {https://www.eventbrite.com/e/technical-workshop-on-fuel-cycle-simulation-twofcs-tickets-1033939178917},
-	abstract = {June 11-13, 2025},
-	titleaddon = {Eventbrite},
-	urldate = {2025-02-02},
-	langid = {english},
-	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/ERZNY33H/technical-workshop-on-fuel-cycle-simulation-twofcs-tickets-1033939178917.html:text/html},
-}
-
 @book{international_renewable_energy_agency_renewable_2021,
 	location = {Abu Dhabi, Geneva},
 	title = {Renewable Energy and Jobs - Annual Review 2021},
@@ -20768,4 +20723,83 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2024-09-23},
 	langid = {american},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/H5RM7SLW/constellation-microsoft-three-mile-island.html:text/html},
+}
+
+@report{quint_practical_2025,
+	title = {Practical Guidance and Considerations for Large Load Interconnections},
+	url = {https://gridlab.org/portfolio-item/practical-guidance-and-considerations-for-large-load-interconnections/},
+	abstract = {This report provides an outline of the current state of Large Load interconnections including data centers. It includes recommended questions for regulators and utilities to develop more robust interconnection processes. It also provides template data collection forms that can be used when requesting data from new large loads.},
+	pages = {96},
+	institution = {Elevate Energy Consulting},
+	author = {Quint, Ryan and Thomas, Kyle and Zhao, Jiecheng and Isaacs, Andrew and Baker, Casey},
+	urldate = {2025-06-23},
+	date = {2025-05},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/LY5CV8IB/Practical Guidance and Considerations for Large Load Interconnections.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4JMLX7J6/practical-guidance-and-considerations-for-large-load-interconnections.html:text/html},
+}
+
+@report{davenport_generational_2024,
+	location = {United States},
+	title = {Generational Growth: {AI}, data centers and the coming {US} power demand surge},
+	url = {https://www.goldmansachs.com/pdfs/insights/pages/generational-growth-ai-data-centers-and-the-coming-us-power-surge/report.pdf},
+	shorttitle = {Generational Growth},
+	abstract = {Driven by {AI}, broader demand and a deceleration in the pace of energy efficiency gains, global data center power demand is poised to more than double by 2030 after being flattish in 2015-20. This growth is the primary catalyst alongside increasing manufacturing/industrial production and broader electrification trends, to an acceleration in {US} electricity demand {CAGR} to 2.4\% through the end of the decade from 0\% in the last decade. We believe supporting data center driven load growth will require investment by Utilities of \$50 bn in new power generation capacity. We assume a 60/40 split between gas and renewables, which we expect to drive {\textasciitilde}3.3 bcf/d incremental natural gas demand by 2030. While investor interest in the {AI} revolution theme is not new, we believe downstream investment opportunities in utilities, renewable generation and industrials whose investment and products will be needed to support this growth are underappreciated.},
+	pages = {35},
+	institution = {Goldman Sachs},
+	author = {Davenport, Carly and Singer, Brian and Mehta, Neil and Lee, Brian and Mackay, John and Modak, Ati and Corbett, Brendan and Miller, John and Toshiya, Hari and Ritchie, Joe and Delaney, Mark and Revich, Jerry and Jaiya, Jaskaran and Venugopal, Varsha and Cash, Nick and Halferty, Olivia},
+	urldate = {2024-11-06},
+	date = {2024-04-28},
+	langid = {english},
+	file = {report.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/LW7L5GNN/report.pdf:application/pdf},
+}
+
+@online{howland_ethan_pjm_2025,
+	title = {{PJM} fast-tracks 11.8 {GW}, mainly gas, to bolster power supplies {\textbar} Utility Dive},
+	url = {https://www.utilitydive.com/news/pjm-resource-reliability-rri-gas-interconnection/747090/},
+	abstract = {Natural gas-fired generation accounts for 69\% of selected Reliability Resource Initiative capacity, followed by batteries at 19\% and nuclear at 12\%.},
+	author = {{Howland, Ethan}},
+	urldate = {2025-05-30},
+	date = {2025-05-05},
+	langid = {american},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WDI6RFD6/747090.html:text/html},
+}
+
+@report{miso_long-term_2024,
+	title = {Long-Term Load Forecast},
+	url = {https://cdn.misoenergy.org/MISO%20Long-Term%20Load%20Forecast%20Whitepaper_December%202024667166.pdf},
+	author = {{MISO}},
+	urldate = {2025-03-10},
+	date = {2024-12},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PNLFIUZ7/MISO Long-Term Load Forecast Whitepaper_December 2024667166.pdf:application/pdf},
+}
+
+@report{pjm_resource_adequacy_planning_department_2024_2024,
+	title = {2024 {PJM} Load Forecast Report},
+	url = {https://www.pjm.com/-/media/library/reports-notices/load-forecast/2024-load-report.ashx},
+	abstract = {The report includes long-term forecasts of peak loads, net energy, load
+management, distributed solar generation, plug-in electric vehicles, and
+battery storage for each {PJM} zone, region, locational deliverability area
+({LDA}), and the total {RTO}.},
+	pages = {88},
+	institution = {{PJM}},
+	author = {{PJM Resource Adequacy Planning Department}},
+	urldate = {2024-10-22},
+	date = {2024-02-01},
+	langid = {english},
+	note = {Revised: 2/1/2024},
+	file = {2024-load-report.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4KKAEJ3R/2024-load-report.pdf:application/pdf},
+}
+
+@online{wittenberg_how_2025,
+	title = {'How come I can’t breathe?': Musk's data company draws a backlash in Memphis},
+	url = {https://www.politico.com/news/2025/05/06/elon-musk-xai-memphis-gas-turbines-air-pollution-permits-00317582},
+	shorttitle = {'How come I can’t breathe?},
+	abstract = {The company’s turbines — enough to power 280,000 homes — run without emission controls in an area that leads Tennessee in asthma hospitalizations.},
+	titleaddon = {{POLITICO}},
+	type = {Commercial},
+	author = {Wittenberg, Ariel},
+	urldate = {2025-06-25},
+	date = {2025-05-06},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/KIGCZDTZ/elon-musk-xai-memphis-gas-turbines-air-pollution-permits-00317582.html:text/html},
 }
