--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -89,5 +89,6 @@
 \acro{fco}[FCO]{Fuel Cycle Options Campaign}
 \acro{doe}[DOE]{Department of Energy}
 \acro{lcoe}[LCOE]{levelized cost of electricity}
+\acro{ai}[AI]{artificial intelligence}
 
 
