adds scripts to run scaling study and plots

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -22,11 +22,11 @@
 
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
-% \input{4-benchmark-results/40-benchmark.tex}
+\input{4-benchmark-results/40-benchmark.tex}
 
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
-\input{5-examples/50-intro.tex}
+% \input{5-examples/50-intro.tex}
 
 \chapter{Using modeling to enhance just outcomes}
 \label{chapter:communities}
